fixed footer positioning to remove white space

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
     background-color: #6ecdfa;
     margin: 0;
     padding: 0;
+    min-height: 100%;
 }
 header {
     display: grid;
@@ -69,7 +70,7 @@ h3 {
     column-gap: 50px;
     padding-left: 25px;
     padding-right: 25px;
-    padding-bottom: 25px;
+    padding-bottom: 100px;
 }
 #projects h2 {
     grid-area: 1 / 1 / 2 / 4;
@@ -102,7 +103,7 @@ footer {
     height: 75px;
     background-color: #ff0000;
     border-top: 3px solid black;
-    position: relative;
+    position: fixed;
     bottom: 0;
 }
 footer h1 {
